# AgentSkills

./: .gitignore  README.md
.claude/: settings.json
.claude-plugin/: plugin.json
fastapi/: README.md  pyproject.toml
fastapi/.claude/: settings.json
fastapi/.claude-plugin/: plugin.json
fastapi/skills/fastapi-skill/agents/: engineering-advisor.md  model-designer.md  project-analyzer.md
fastapi/skills/fastapi-skill/assets/azure-templates/function-app/: host.json
fastapi/skills/fastapi-skill/assets/azure-templates/function-app/WrapperFunction/: __init__.py
fastapi/skills/fastapi-skill/assets/docker-templates/: Dockerfile.gunicorn  Dockerfile.uvicorn  gunicorn.conf.py
fastapi/skills/fastapi-skill/references/: auth.md  performance.md  pydantic-patterns.md  rate-limiting.md  stack-internals.md
fastapi/skills/fastapi-skill/scripts/: generate_structure.py  validate_models.py
nicegui/: .gitignore  README.md  pyproject.toml
nicegui/skills/nicegui-skill/: SKILL.md
nicegui/skills/nicegui-ui/: SKILL.md
skills/fastapi-skill/: SKILL.md
skills/fastapi-skill/agents/: api-designer.md
skills/fastapi-skill/references/: api-design.md  async-patterns.md  cost-and-capacity.md  deployment.md  official-patterns.md  package-internals.md  testing.md  ui-integration.md  uvicorn-internals.md
skills/fastapi-skill/scripts/: analyze_project.py
skills/nicegui-skill/examples/: chat_app.py
skills/nicegui-skill/references/: data-binding.md  design-aesthetics.md  examples-visual-guide.md  integrations.md  internals-element.md  performance.md  project-setup.md
(+21 files in other folders)
