[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SaiJagadeeshY", email = "ysaijagadeeshuh@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.135.1",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
